samples/_failures_safe/1761471007_bfa781_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11c65930.c: In function ‘main’:
./samples/SAFE/__tmp_11c65930.c:152:5: error: expected expression at end of input
  152 |     if (mat1.cols ==
      |     ^~
./samples/SAFE/__tmp_11c65930.c:152:5: error: expected declaration or statement at end of input
